AM_CPPFLAGS = -I${top_srcdir}

noinst_PROGRAMS = \
	TestCondition \
	TestHttpRequest \
	TestHttpServer \
	TestLogging \
	TestStatistics \
	TestWorker \
	simple_worker



TestCondition_DEPENDENCIES = ../../libpalo.la
TestCondition_LDADD        = ../../libpalo.la
TestCondition_SOURCES      = TestCondition.cpp



TestHttpRequest_DEPENDENCIES = ../../libpalo.la
TestHttpRequest_LDADD        = ../../libpalo.la
TestHttpRequest_SOURCES      = TestHttpRequest.cpp



TestHttpServer_DEPENDENCIES = ../../libpalo.la
TestHttpServer_LDADD        = ../../libpalo.la
TestHttpServer_SOURCES      = TestHttpServer.cpp



TestLogging_DEPENDENCIES = ../../libpalo.la
TestLogging_LDADD        = ../../libpalo.la
TestLogging_SOURCES      = TestLogging.cpp



TestStatistics_DEPENDENCIES = ../../libpalo.la
TestStatistics_LDADD        = ../../libpalo.la
TestStatistics_SOURCES      = TestStatistics.cpp



TestWorker_DEPENDENCIES = ../../libpalo.la
TestWorker_LDADD        = ../../libpalo.la
TestWorker_SOURCES      = TestWorker.cpp



simple_worker_DEPENDENCIES = 
simple_worker_LDADD        = 
simple_worker_SOURCES      = simple_worker.cpp
