if ENABLE_PALO1

noinst_PROGRAMS = \
	Demo \
	Timings \
	TestDimension



Demo_DEPENDENCIES =
Demo_LDADD        =
Demo_SOURCES      = Demo.cpp CubeSample.cpp PaloConnector.cpp



Timings_DEPENDENCIES =
Timings_LDADD        =
Timings_SOURCES      = Timings.cpp CubeSample.cpp PaloConnector.cpp



TestDimension_DEPENDENCIES =
TestDimension_LDADD        =
TestDimension_SOURCES      = TestDimension.cpp PaloConnector.cpp

endif

